# esp32-wifi-example

./: Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
src/: animation.rs  convert.rs  http.rs  main.rs  template.rs  wifi.rs
src/wifi/: storage.rs
templates/: wifi.html
