[package]
name = "soft-ap"
version = "0.1.0"
authors = ["Icxolu <10486322+Icxolu@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"
lto = "off"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
lto = "off"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = { version = "1.0.69", default-features = false }
askama = "0.11.1"
display-interface = "0.4.1"
embedded-graphics = "0.7.1"
embedded-svc = { version = "0.24.0", default-features = false, features = ["use_serde", "use_numenum"] }
enumset = "1.0.12"
esp-idf-hal = "0.40.1"
esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
heapless = "0.7.16"
log = "0.4.17"
postcard = "1.0.2"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.93", default-features = false, features = ["alloc"] }
serde_repr = "0.1.10"
ssd1306 = "0.7.1"


[build-dependencies]
embuild = "0.30.4"
